--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-    "name": "hackQ",
-    "version": "1.0.0",
-    "description": "hackathon helper queue",
-    "scripts": {
-        "postinstall": "sudo sh ./bin/setup.sh install",
-        "prestart": "sh ./bin/build.sh",
-        "start": "node server.js",
-        "test": "mocha"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/bsoe003/hackQ.git"
-    },
-    "author": "",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/bsoe003/hackQ/issues"
-    },
-    "dependencies": {
-        "express": "4.11.2",
-        "mongodb": "1.4.30",
-        "mongoose": "3.8.23",
-        "hbs": "2.8.0"
-    }
+  "name": "hackQ",
+  "version": "1.0.0",
+  "description": "hackathon helper queue",
+  "scripts": {
+    "postinstall": "sudo sh ./bin/setup.sh install",
+    "start": "node server.js",
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bsoe003/hackQ.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/bsoe003/hackQ/issues"
+  },
+  "dependencies": {
+    "express": "4.11.2",
+    "hbs": "2.8.0",
+    "mongodb": "1.4.30",
+    "mongoose": "3.8.23"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-react": "^0.12.2"
+  }
 }
