--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "express": "4.11.2",
     "hbs": "2.8.0",
     "mongodb": "1.4.30",
-    "mongoose": "3.8.23"
+    "mongoose": "3.8.23",
+    "socket.io": "1.3.6"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-cssmin": "^0.13.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-react": "^0.12.2"
+    "grunt": "0.4.5",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-cssmin": "0.13.0",
+    "grunt-contrib-sass": "0.9.2",
+    "grunt-contrib-uglify": "0.9.2",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-react": "0.12.2"
   }
 }
