--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "express": "4.11.2",
-    "hbs": "2.8.0",
+    "express-handlebars": "2.0.1",
     "mongodb": "1.4.30",
     "mongoose": "3.8.23",
     "socket.io": "1.3.6"
