--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-uglify": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-react": "0.12.2"
+    "grunt-react": "0.12.2",
+    "grunt-run": "^0.4.0"
   }
 }
