--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "express-handlebars": "2.0.1",
     "mongodb": "1.4.30",
     "mongoose": "3.8.23",
+    "passport": "0.3.0",
+    "passport-local": "1.0.0",
     "socket.io": "1.3.6"
   },
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "0.13.0",
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-uglify": "0.9.2",
