--- a/package.json
+++ b/package.json
@@ -17,23 +17,29 @@
     "url": "https://github.com/bsoe003/hackQ/issues"
   },
   "dependencies": {
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
+    "dotenv": "1.2.0",
     "express": "4.11.2",
     "express-handlebars": "2.0.1",
+    "express-session": "^1.11.3",
+    "method-override": "^2.3.5",
     "mongodb": "1.4.30",
     "mongoose": "3.8.23",
+    "morgan": "^1.6.1",
     "passport": "0.3.0",
-    "passport-local": "1.0.0",
+    "passport-facebook": "2.0.0",
     "socket.io": "1.3.6"
   },
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-concat": "0.5.1",
     "grunt-contrib-cssmin": "0.13.0",
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-uglify": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
     "grunt-react": "0.12.2",
-    "grunt-run": "^0.4.0"
+    "grunt-run": "0.4.0"
   }
 }
